[feat] modify view

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon"
+          type="image/ico"
+          href="/static/img/favicon.ico">
+
     <meta charset="UTF-8">
     <title>Popular Science Compling Research</title>
     <link rel="stylesheet" type="text/css" href="{% static "node_modules/patternfly/dist/css/patternfly.css" %}">
